--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,24 +1,20 @@
-body {
-    font-size: 18px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-button {
-    font-size: 18px;
-    padding: 2pt 6pt;
-    margin: 1pt;
-}
-
 .showMore {
     display: block;
-    width: 300px;
     font-size: 24px;
-    padding: 2pt 6pt;
-    margin: 8px;
+    padding: 0.5em;
+    margin: 32px 0 96px 0;
+    width: 100%;
+
+    background-color: #33cc33;
+    color: white;
+    border: none;
+
+    cursor: pointer;
 }
 
-fieldset {
-    display: inline-block;
+.showMore:hover {
+    background-color: #99ff99;
+    color: black;
 }
 
 table label {
@@ -38,16 +34,15 @@ table input[type="text"] {
 .cardArticle {
     color: black;
     text-decoration: none;
-    width: 300px;
-    display: inline-block;
+    display: block;
     border: 2px solid #c5c5c5;
-    margin: 8px;
     height: 100%;
     cursor: pointer;
+    margin: 8px 0;
 }
 
 .cardArticle:hover {
-    border: 2px solid #66ccdd;
+    border: 2px solid #99ff99;
 }
 
 ul {
@@ -58,9 +53,8 @@ ul {
 
 .cardLabel {
     padding: 8px;
-    height: 75px;
-    overflow: hidden;
-    background-color: #dddddd;
+    background-color: #33cc33;
+    color: white;
     font-size: 1.1em;
     position: relative;
 }
@@ -82,31 +76,31 @@ ul {
 
 .ingredientList {
     padding: 8px;
-    height: 150px;
-    overflow-y: auto;
+    height: auto;
+    overflow-y: hidden;
 }
 
 .missing {
     background-color: #ffeecc;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
     .cardArticle {
-        width: 94%;
-        margin-left: 3%;
-        margin-right: 3%;
+        display: inline-block;
+        width: 300px;
+        margin: 8px;
     }
-
+    .cardLabel {
+        height: 75px;
+        overflow: hidden;
+    }
     .ingredientList {
-        padding: 8px;
-        height: auto;
-        overflow-y: hidden;
+        height: 150px;
+        overflow-y: auto;
     }
-
     .showMore {
-        width: 94%;
-        margin-left: 3%;
-        margin-right: 3%;
-        margin-bottom: 64px;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
