UX and routing improvements

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -80,6 +80,11 @@ ul {
     overflow-y: hidden;
 }
 
+p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 .missing {
     background-color: #ffeecc;
 }
