--- a/css/catalog.css
+++ b/css/catalog.css
@@ -86,6 +86,17 @@ p {
     background-color: #ffeecc;
 }
 
+.tagBtn {
+    border: none;
+    border-radius: 8px;
+    padding: 0.25em 0.5em;
+}
+
+.tagBtn::before {
+    content: "✖";
+    margin-right: 0.25em;
+}
+
 @media screen and (min-width: 600px) {
     .cardArticle {
         display: inline-block;
